--- a/src/renderer/components/Inputs/Input/styles.module.sass
+++ b/src/renderer/components/Inputs/Input/styles.module.sass
@@ -5,16 +5,29 @@
   background-color: $gray-100
   width: 100%
   border-radius: $default-radius
+  max-height: 57px
 
   span
+    position: relative
     font-size: .8rem
-    padding: .3rem .7rem
+    padding: 0 .7rem
+    top: 5px
     color: $gray-500
+    font-weight: 500
+    text-transform: uppercase
+    font-family: 'Anek Devanagari'
 
   input
     background-color: $gray-100
     width: 100%
-    padding: .5rem .7rem
+    padding: .6rem .7rem
     color: $black
     border-radius: $default-radius
     font-size: .9rem
+    margin-top: -5px
+
+.notValid
+  span
+    color: $red-100 !important
+.notValid.input
+  border: 1px solid $red-100
