--- a/src/renderer/components/Loading/styles.module.sass
+++ b/src/renderer/components/Loading/styles.module.sass
@@ -4,20 +4,19 @@
   position: absolute
   width: 200vw
   height: 200vh
+
   .background
     @include flex(center, center, column)
     position: absolute
-    left: -100%
     border-radius: 9999rem
-    top: 100%
     width: 100%
     height: 100%
-    background-color: $blue-100
+    background-color: $white
     z-index: 2001
     transition: all 3s ease
 
     svg
-      transform: opacity 1s ease
+      transition: opacity 3s ease
       max-width: 500px
       opacity: 0
 
@@ -28,6 +27,22 @@
 
     svg
       opacity: 1
+
+.notAnimated
+  .background
+    left: -100%
+    top: 100%
+
+    svg
+      opacity: 0
+
+.finalized
+  .background
+    left: 70%
+    top: -80%
+
+    svg
+      opacity: 0
 
 
 
