--- a/src/renderer/pages/Auth/Register/styles.module.sass
+++ b/src/renderer/pages/Auth/Register/styles.module.sass
@@ -7,10 +7,16 @@
 
   img
     position: absolute
-    top: 100px
+    top: 50px
     max-width: 200px
+
+    @media (min-width: 1400px)
+      top: 100px
 
   form
     @include flex(center, center, column)
-    gap: 1rem
+    gap: 2rem
     margin-top: 8rem
+
+    div
+      width: 100%
