--- a/src/renderer/pages/Auth/styles.module.sass
+++ b/src/renderer/pages/Auth/styles.module.sass
@@ -1,4 +1,5 @@
 @use '../../styles/_util' as *
+
 .container
   @include flex(center, center, column)
   height: 100vh
@@ -19,16 +20,26 @@
     img
       position: relative
       max-width: 400px
-      transition: all 2s ease-in-out, opacity 1.5s ease
+      transition: left 2s ease-in-out, right 2s ease-in-out,  opacity 1.5s ease
       &:first-child
-        right: 550px
-        top: 680px
-        opacity: 1
+        right: 30%
+        top: 37%
+        opacity: 0
+
+        @media (min-width: 1500px)
+          max-width: 550px !important
+          right: 35%
+          top: 35% !important
+
       &:last-child
-        left: 600px
-        top: 350px
+        left: 35%
+        top: 20%
         opacity: 1
 
+        @media (min-width: 1500px)
+          max-width: 550px !important
+          left: 35%
+          top: 20%
 
   .form
     @include flex(center, center, row)
@@ -58,6 +69,7 @@
       @include flex(center, center, column)
       position: absolute
       top: 100px
+      width: 45%
       color: $white
       z-index: 2000
       gap: 2rem
@@ -86,16 +98,17 @@
 .signUpMode
   .background
     right: -90%
+
     img
       &:first-child
-        right: 550px
-        top: 680px
+        right: 35%
+        top: 37%
         opacity: 1
+
       &:last-child
         left: 600px
-        top: 350px
+        top: 20%
         opacity: 0
-
 
   .form
     .register
@@ -108,6 +121,7 @@
     .registerText
       opacity: 1
       right: 0
+
     .loginText
       opacity: 0
       left: -200px
