--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -2,13 +2,20 @@
 $blue-100: #2196F3
 $blue-100-hover: #197AC7
 
+$red-100: #DD4C4C
+
+$green-100: #05CF60
 
 $white: #FFFFFF
 $black: #000000
 $gray-100: #ECECEC
 $gray-200: #E1E1E1
+$gray-400: #E4E5E9
 $gray-300: #CDCDCD
 $gray-500: #767676
+$gray-600: #616161
+$gray-700: #292D30
+$gray-800: #292929
 $gray-900: #131313
 
 
