--- a/src/renderer/components/Sidebar/Icon/styles.module.sass
+++ b/src/renderer/components/Sidebar/Icon/styles.module.sass
@@ -1,15 +1,21 @@
 @use '../../../styles/_util' as *
 
+
+.icon.selected
+  &::before
+    visibility: visible
+    opacity: 1
+    height: 25px
+    left: -14px
+
 .icon
   height: 55px
   width: 55px
-  background-color: $blue-100
   cursor: pointer
   border-radius: 5rem
   z-index: 1
 
-  &:hover
-    background-color: red
+
 
   &::before
     content: ''
@@ -32,4 +38,18 @@
     height: 25px
     left: -14px
 
+
+  button
+    p
+      @include flex(center, center, row)
+      background-color: $blue-100
+      height: 55px
+      width: 55px
+      border-radius: 5rem
+      font-size: 1rem
+      color: $white
+
+    img
+      max-width: 57px
+      border-radius: 5rem
 
