--- a/src/renderer/routes/styles.module.sass
+++ b/src/renderer/routes/styles.module.sass
@@ -2,10 +2,11 @@
   width: 100%
   height: 100%
   display: flex
-  flex-direction: column
+  flex-direction: row
 
 .app
   width: 100%
   height: 100%
   display: flex
-  flex-direction: row
+  flex-direction: column
+  z-index: 1
