--- a/src/renderer/components/Sidebar/styles.module.sass
+++ b/src/renderer/components/Sidebar/styles.module.sass
@@ -13,9 +13,14 @@
 .sidebar
   @include flex(flex-start, center, row)
   height: 100vh
-  width: 80px
+  width: 75px
   padding: 1rem 0
+  border-bottom-right-radius: 4rem
+  border-top-right-radius: 4rem
+  z-index: 20
 
   .icons
     @include flex(flex-start, center, column)
     gap: 1rem
+    margin-top: 2.5rem
+
