--- a/src/renderer/pages/Auth/Login/Token/styles.module.sass
+++ b/src/renderer/pages/Auth/Login/Token/styles.module.sass
@@ -5,6 +5,14 @@
   width: 100%
   gap: 2rem
 
+  form
+    @include flex(center, center, column)
+    width: 100%
+    gap: 2rem
+
+    div
+      width: 100%
+
   .resendToken
     &:hover
       color: $blue-100
