--- a/src/renderer/components/Sidebar/styles.module.sass
+++ b/src/renderer/components/Sidebar/styles.module.sass
@@ -1,26 +1,61 @@
 
 @use '../../styles/_util' as *
 
+// --------------------------------------------------------------
+// ---------------------------- THEME ---------------------------
+// --------------------------------------------------------------
 
 .sidebar.dark
   background-color: $gray-700
-
 .sidebar.light
   background-color: $gray-400
 
-
+// --------------------------------------------------------------
+// --------------------------- SETTINGS -------------------------
+// --------------------------------------------------------------
 
 .sidebar
-  @include flex(flex-start, center, row)
+  @include flex(center, flex-start, column)
   height: 100vh
-  width: 75px
+  width: 70px
   padding: 1rem 0
   border-bottom-right-radius: 4rem
   border-top-right-radius: 4rem
   z-index: 20
+  position: relative
 
   .icons
-    @include flex(flex-start, center, column)
-    gap: 1rem
+    @include flex(center, flex-start, column)
+    gap: .5rem
+    width: 100%
     margin-top: 2.5rem
+    overflow: auto
+    height: calc( 100% - 130px )
+    scroll-behavior: smooth
 
+    div
+      &:first-child
+        margin-top: 5px
+
+    &::-webkit-scrollbar
+      display: none
+      width: 0
+      height: 0
+
+
+  .createIcon
+    @include flex(center, center, column)
+    width: 50px
+    height: 50px
+    border: 1px solid $green-100
+    color: $green-100
+    border-radius: 100%
+    cursor: pointer
+    font-size: 1.2rem
+    transition: background-color 0.2s ease, color 0.2s ease
+    position: absolute
+    bottom: 30px
+
+    &:hover
+      background-color: $green-100
+      color: $white
