--- a/src/renderer/pages/Auth/Login/styles.module.sass
+++ b/src/renderer/pages/Auth/Login/styles.module.sass
@@ -13,10 +13,36 @@
     @media (min-width: 1800px)
       max-width: 300px
 
-  form
+  .loginContainer
     @include flex(center, center, column)
-    gap: 2rem
-    margin-top: 8rem
+    width: 100%
+    height: 100%
 
-    div
+    form
+      @include flex(center, center, column)
+      gap: 2rem
+      margin-top: 8rem
+      visibility: hidden
+      opacity: 0
+      transition: opacity 0.5s ease
+
+      div
+        width: 100%
+
+    .buttonStart
+      @include flex(center, center, column)
+      position: absolute
       width: 100%
+      button
+        position: relative
+
+  .loginContainer.stepTwo
+    form
+      visibility: visible
+      opacity: 1
+
+    .buttonStart
+      button
+        display: none
+        pointer-events: none
+
