--- a/src/renderer/pages/Auth/Register/styles.module.sass
+++ b/src/renderer/pages/Auth/Register/styles.module.sass
@@ -13,10 +13,38 @@
     @media (min-width: 1400px)
       top: 100px
 
-  form
+  .registerContainer
     @include flex(center, center, column)
-    gap: 2rem
-    margin-top: 8rem
+    width: 100%
+    height: 100%
+    form
+      @include flex(center, center, column)
+      gap: 2rem
+      margin-top: 8rem
+      opacity: 0
+      transition: opacity 0.5s ease
 
-    div
+      div
+        width: 100%
+
+    .buttonStart
+      @include flex(center, center, column)
+      position: absolute
       width: 100%
+
+      button
+        transition: all 0.3s ease
+        position: relative
+        opacity: 1
+
+  .registerContainer.stepTwo
+    form
+      visibility: visible
+      opacity: 1
+
+    .buttonStart
+      button
+        display: none
+        pointer-events: none
+        opacity: 0
+
