--- a/src/renderer/pages/Workspace/styles.module.sass
+++ b/src/renderer/pages/Workspace/styles.module.sass
@@ -1,5 +1,25 @@
 @use '../../styles/_util' as *
 
+// --------------------------------------------------------------
+// ---------------------------- THEME ---------------------------
+// --------------------------------------------------------------
+
+.workspace.dark
+  .search
+    .input
+      input
+        background-color: $gray-800
+        color: $white
+      svg
+        color: $white
+
+.workspace.light
+  .search
+    .input
+      input
+        background-color: $gray-100
+
+
 .workspace
   @include flex(center, center, row)
   width: 100%
@@ -9,6 +29,7 @@
     width: 100%
     height: 100%
     flex: 1
+    min-width: 450px
     max-width: 450px
 
     .search
@@ -22,7 +43,6 @@
         position: relative
 
         input
-          background-color: $gray-100
           border-radius: $default-radius
           height: 35px
           width: 100%
@@ -56,6 +76,7 @@
       overflow-x: hidden
       padding: 1rem
 
+
       .title
         display: flex
         width: 100%
@@ -85,4 +106,3 @@
     height: 100%
     width: 100%
     flex: 2
-    background-color: red
