--- a/src/renderer/routes/styles.module.sass
+++ b/src/renderer/routes/styles.module.sass
@@ -1,8 +1,13 @@
+@use '../styles/_util' as *
+
 .flexApp
   width: 100%
   height: 100%
   display: flex
   flex-direction: row
+
+.flexApp.dark
+  background-color: $gray-900 !important
 
 .app
   width: 100%
@@ -10,3 +15,4 @@
   display: flex
   flex-direction: column
   z-index: 1
+
