Mostragem dos cofres

--- a/src/renderer/components/SafeBox/styles.module.sass
+++ b/src/renderer/components/SafeBox/styles.module.sass
@@ -25,7 +25,7 @@
   @include flex(center, center, row)
   width: 100%
   gap: 1rem
-  padding: 1rem
+  padding: .8rem
   border-radius: $default-radius
 
   &:hover
