--- a/src/renderer/pages/Workspace/styles.module.sass
+++ b/src/renderer/pages/Workspace/styles.module.sass
@@ -101,7 +101,7 @@
             background-color: $gray-400
             border-radius: 5rem
 
-  .safebox
+  .currentSafeBox
     @include flex(flex-start, center, row)
     height: 100%
     width: 100%
