--- a/src/renderer/components/Sidebar/styles.module.sass
+++ b/src/renderer/components/Sidebar/styles.module.sass
@@ -6,9 +6,9 @@
 // --------------------------------------------------------------
 
 .sidebar.dark
-  background-color: $gray-700
+  background-color: #262626
 .sidebar.light
-  background-color: $gray-400
+  background-color: $gray-300
 
 // --------------------------------------------------------------
 // --------------------------- SETTINGS -------------------------
@@ -41,7 +41,6 @@
       display: none
       width: 0
       height: 0
-
 
   .createIcon
     @include flex(center, center, column)
