--- a/src/renderer/components/Forms/FormMessageError/styles.module.sass
+++ b/src/renderer/components/Forms/FormMessageError/styles.module.sass
@@ -22,5 +22,14 @@
   &::before
     background-color: $red-100
 
+.messageError
+  color: $red-100
+  font-family: 'Anek Devanagari'
+  font-size: 1rem
+  font-weight: 500
+
+  position: absolute
+
+
 
 
