--- a/src/renderer/components/Inputs/Input/styles.module.sass
+++ b/src/renderer/components/Inputs/Input/styles.module.sass
@@ -20,32 +20,66 @@
 // --------------------------------------------------------------
 // -------------------------- SETTINGS --------------------------
 // --------------------------------------------------------------
-
-.input
-  @include flex(flex-start, center, column)
+.inputContainer
+  @include flex(center, center, row)
   width: 100%
-  border-radius: $default-radius
-  max-height: 57px
 
-  span
-    position: relative
-    font-size: .8rem
-    padding: 0 .7rem
-    top: 5px
-    color: $gray-500
-    font-weight: 500
-    text-transform: uppercase
-    font-family: 'Anek Devanagari'
-
-  input
+  .input
+    @include flex(flex-start, center, column)
     width: 100%
-    padding: .6rem .7rem
     border-radius: $default-radius
-    font-size: .9rem
-    margin-top: -5px
+    max-height: 57px
+
+    span
+      position: relative
+      font-size: .8rem
+      padding: 0 .7rem
+      top: 5px
+      color: $gray-500
+      font-weight: 500
+      text-transform: uppercase
+      font-family: 'Anek Devanagari'
+
+    input
+      width: 100%
+      padding: .6rem .7rem
+      border-radius: $default-radius
+      font-size: .9rem
+      margin-top: -5px
+
+  .bar
+    @include flex(center, center, row)
+    position: absolute
+    width: 100%
+
+    margin-top: 3rem
+    &::before
+      content: ''
+      position: absolute
+      background-color: green
+      width: 20%
+      height: 3px
+      border-radius: 5rem
+      top: 10px
+
+  .correct
+    &::before
+      background-color: $green-100
+
+  .error
+    &::before
+      background-color: $red-100
+
+  .messageError
+    color: $red-100
+    font-family: 'Anek Devanagari'
+    font-size: 1rem
+    font-weight: 500
+
 
 .notValid
   span
     color: $red-100 !important
 .notValid.input
   border: 1px solid $red-100
+
