--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -10,13 +10,28 @@
   .title
     color: $white
 
+  .dropdown
+    .option
+      background-color: $gray-700
+      color: $white
+      >div
+        &:hover
+          background-color: $gray-500
+
 .light
   .actions
     button
       color: $black
       background-color: $gray-100
       &:hover
-        background-color: $gray-300
+        background-color: $gray-400
+
+  .dropdown
+    .option
+      background-color: $gray-100
+      >div
+        &:hover
+          background-color: $gray-400
 
 
 header
@@ -41,52 +56,69 @@ header
     @include flex(flex-start, flex-start, row)
     width: 100%
     height: 100%
-    gap: 1rem
+    gap: 2rem
     position: relative
-    margin-bottom: 1rem
+
     &::before
       content: ''
       position: absolute
       width: 100%
       height: 1px
-      background-color: $gray-400
+      background-color: $gray-300
       bottom: -1rem
+
+    svg
+      min-width: 80px
+      min-height: 80px
 
     .description
       padding: .5rem 0
 
-    .annotation
-      svg
-        color: $blue-100
-        font-size: 80px
-    .bankAccount
-      svg
-        color: $yellow-100
-        height: 60px
-        font-size: 70px
-    .email
-      svg
-        color: $red-100
-        font-size: 85px
-    .kubeconfig
-      svg
-        color: $blue-100
-        font-size: 80px
-    .softwareLicense
-      svg
-        color: $green-100
-        font-size: 85px
-    .login
-      svg
-        color: $red-100
-        font-size: 80px
-    .ssh
-      svg
-        color: $gray-300
-    .server
-      svg
-        font-size: 75px
-        color: $gray-300
-    .site
-      svg
-        color: $green-100
+  .dropdown
+    @include flex(center, center, row)
+    width: 100%
+    gap: 2rem
+    position: relative
+    color: $black
+    z-index: 300
+    margin-top: 8px
+
+    &::before
+      content: ''
+      position: absolute
+      width: 100%
+      height: 1px
+      background-color: $gray-300
+      bottom: -1rem
+
+    svg
+      min-width: 80px
+      min-height: 80px
+
+    div
+      transition: background-color 0.2s ease
+      width: 100%
+
+    input
+      cursor: pointer
+      width: 100%
+
+    .input:focus-within ~ .option
+      opacity: 1
+      visibility: visible
+
+    .option
+      position: absolute
+      top: 60px
+      right: 0
+      border-radius: 10px
+      overflow: hidden
+      transition: opacity 0.2s, visibility 0.2s
+      opacity: 0
+      visibility: hidden
+      margin-top: .5rem
+
+      div
+        padding: 12px 20px
+        cursor: pointer
+
