--- a/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/MainSafeBox/styles.module.sass
@@ -1,15 +1,39 @@
 @use '../../../../styles/_util' as *
 
-.form
+.mainSafeBox
   @include flex(center, center, column)
   width: 100%
-  height: 100%
 
-
-  form
-    @include flex(center, center, column)
+  .menu
+    @include flex(center, flex-start, row)
     width: 100%
-    height: 100%
     gap: 1rem
+    margin-bottom: 1rem
 
-    margin-top: 3rem
+
+    button
+      position: relative
+      font-weight: 500
+      font-size: .9rem
+      @include flex(center, center, row)
+      &::before
+        content: ''
+        position: absolute
+        width: 0
+        border-radius: 5rem
+        height: 1px
+        background-color: $black
+        bottom: 0
+        transition: width 0.2s ease
+      &:hover
+        &::before
+          width: 100%
+    .selected
+      position: relative
+      &::before
+        content: ''
+        position: absolute
+        width: 100%
+        height: 1px
+        background-color: $black
+        bottom: 0
