--- a/src/renderer/pages/Workspace/ViewSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/styles.module.sass
@@ -1,16 +1,31 @@
 @use '../../../styles/_util' as *
 
 .currentSafeBox
-  @include flex(flex-start, flex-start, column)
+  @include flex(center, center, column)
   width: 100%
-  height: 100%
   padding: 2rem 4rem
   max-width: 1100px
-
+  height: 100%
+  gap: 3rem
 
   main
-    @include flex(center, center, row)
+    @include flex(flex-start, center, row)
     width: 100%
-    height: 100%
+    height: calc( 100vh - 320px )
+    overflow: auto
+    padding: 1rem 2rem
+
+    &::-webkit-scrollbar-track
+      background-color: $gray-800
+    &::-webkit-scrollbar-thumb
+      background-color: $gray-600
+    &::-webkit-scrollbar
+      width: .4em
+
+    &::-webkit-scrollbar-track
+      border-radius: 5rem
+
+    &::-webkit-scrollbar-thumb
+      border-radius: 5rem
 
 
