--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -5,6 +5,9 @@ $blue-100-hover: #197AC7
 $blue-200: #4D8EFF
 
 $red-100: #DD4C4C
+$red-100-hover: #ff6f6f
+$red-100-dark-hover: #c54949
+
 
 $green-100: #05CF60
 
@@ -16,13 +19,16 @@ $black: #000000
 
 $gray-100: #ECECEC
 $gray-200: #E1E1E1
-$gray-400: #E4E5E9
-$gray-300: #CDCDCD
+$gray-250: #D6D6D8
+$gray-300: #E4E5E9
+$gray-400: #CDCDCD
 $gray-500: #767676
-$gray-600: #616161
-$gray-700: #292D30
-$gray-800: #292929
-$gray-900: #131313
+$gray-600: #505355
+$gray-650: #555555
+$gray-700: #353739
+$gray-800: #262626
+$gray-900: #1F1F1F
+
 
 
 
