--- a/src/renderer/styles/global.sass
+++ b/src/renderer/styles/global.sass
@@ -1,11 +1,14 @@
 @use "./_util" as *
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@400;500;600;700&display=swap')
-
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap')
 *
   margin: 0
   padding: 0
   box-sizing: border-box
+
+html
+  height: 100%
 
 @media (max-width: 1080px)
   html
