adicionado updateuserconfig no banco de dados e api

--- a/src/renderer/components/Inputs/InputEye/styles.module.sass
+++ b/src/renderer/components/Inputs/InputEye/styles.module.sass
@@ -4,18 +4,27 @@
 // ---------------------------- THEME ---------------------------
 // --------------------------------------------------------------
 
-.input.dark
-  background-color: $gray-700
-  input
+.dark
+  .input
     background-color: $gray-700
-    color: $white
+    input
+      background-color: $gray-700
+      color: $white
+    svg
+      color: $white
 
 
-.input.light
-  background-color: $gray-100
-  input
+.light
+  .input
     background-color: $gray-100
-    color: $black
+    input
+      background-color: $gray-100
+      color: $black
+    svg
+      color: $black
+
+    
+  
 
 // --------------------------------------------------------------
 // -------------------------- SETTINGS --------------------------
