--- a/src/renderer/components/Modals/FieldModal/styles.module.sass
+++ b/src/renderer/components/Modals/FieldModal/styles.module.sass
@@ -46,14 +46,14 @@
   @include flex(center, center ,column)
   width: 100%
   height: 100%
-  max-height: 550px
+  max-height: 450px
   max-width: 450px
   padding: 3rem
   position: relative
   border-radius: .5rem
   gap: 1rem
 
-  h2
+  h3
     font-family: 'Anek Devanagari', sans-serif
     font-weight: 600
     text-align: center
@@ -70,16 +70,16 @@
     .buttons
       @include flex(center, center ,column)
       width: 100%
-      gap: 1rem
+      gap: .5rem
       margin-top: 5rem
 
       button
+        @include flex(center, center ,center)
         font-weight: 500
         width: 300px
         height: 45px
         border-radius: $default-radius
         transition: background-color 0.2s ease
-
 
         &:last-child
           background-color: $red-100
