--- a/src/renderer/components/Navbar/styles.module.sass
+++ b/src/renderer/components/Navbar/styles.module.sass
@@ -9,21 +9,23 @@
   color: $white
 
   .icons
-    svg
-      background-color: $gray-800
-      color: $white
+    button
+      background-color: $gray-700
       &:hover
          background-color: $gray-600
+      svg
+        color: $white
 
 .navbar.light
   background-color: $white
 
   .icons
-    svg
+    button
       background-color: $gray-100
-      color: $black
       &:hover
         background-color: $gray-400
+      svg
+        color: $black
 
 
 // --------------------------------------------------------------
@@ -33,6 +35,7 @@
 .navbar
   @include flex(center, space-between, row)
   height: 50px
+  min-height: 50px
   width: 101%
   margin-left: -5px
   background-color: blue
@@ -51,13 +54,18 @@
     gap: 1rem
     margin-right: 2rem
 
-    svg
-      background-color: red
+    button
+      &.selected
+        background-color: $blue-100
+    button
+      @include flex(center, center, row)
       border-radius: $default-radius
-      padding: .5rem
       width: 36px
       height: 36px
       transition: background-color 0.2s ease
+
+      svg
+        font-size: 1.2rem
 
     .iconsUser
       @include flex(center, center, row)
@@ -65,7 +73,7 @@
 
       button
         svg
-          padding: .6rem
+          font-size: 1.1rem
         &:first-child
           margin-left: 1rem
           position: relative
