--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -84,3 +84,33 @@ $default-radius: .5rem
   border-top: 1px solid  rgba(255, 255, 255, 0.1)
   border-bottom: 1px solid  rgba(255, 255, 255, 0.1)
   transition: background-color ease-in-out 0.2s, box-shadow 0.2s
+
+
+@mixin scroolbarLight() 
+  &::-webkit-scrollbar-track
+    background-color: $gray-100
+  &::-webkit-scrollbar-thumb
+    background-color: $gray-500
+  &::-webkit-scrollbar
+    width: .4em
+
+  &::-webkit-scrollbar-track
+    border-radius: 5rem
+
+  &::-webkit-scrollbar-thumb
+    border-radius: 5rem
+
+    
+@mixin scroolbarDark() 
+  &::-webkit-scrollbar-track
+    background-color: $gray-800
+  &::-webkit-scrollbar-thumb
+    background-color: $gray-600
+  &::-webkit-scrollbar
+    width: .4em
+
+  &::-webkit-scrollbar-track
+    border-radius: 5rem
+
+  &::-webkit-scrollbar-thumb
+    border-radius: 5rem
