--- a/src/renderer/components/Buttons/Button/styles.module.sass
+++ b/src/renderer/components/Buttons/Button/styles.module.sass
@@ -1,22 +1,27 @@
 @use '../../../styles/_util' as *
 
 .button
-  width: 100%
   @include flex(center, center, row)
+  width: 100%
+
   position: relative
-  height: 50px
 
   button
-    background-color: $blue-100
+    @include flex(center, center, row)
     width: 100%
-    height: 50px
-    color: $white
-    font-weight: bold
-    text-transform: uppercase
+    height: 45px
+    gap: 8px
     font-size: .9rem
+
+    background-color: $blue-100
+    color: $white
     border-radius: $default-radius
 
     transition: background-color 0.3s ease
+
+    svg
+      color: $white
+      font-size: 1rem
 
     &:hover
       background-color: $blue-100-hover
