--- a/src/renderer/components/Sidebar/styles.module.sass
+++ b/src/renderer/components/Sidebar/styles.module.sass
@@ -43,18 +43,20 @@
       height: 0
 
   .createIcon
-    @include flex(center, center, column)
-    width: 50px
-    height: 50px
-    border: 1px solid $green-100
-    color: $green-100
-    border-radius: 100%
-    cursor: pointer
-    font-size: 1.2rem
-    transition: background-color 0.2s ease, color 0.2s ease
     position: absolute
     bottom: 30px
+    
+    button
+      @include flex(center, center, column)
+      width: 50px
+      height: 50px
+      border: 1px solid $green-100
+      color: $green-100
+      border-radius: 100%
+      cursor: pointer
+      font-size: 1.2rem
+      transition: background-color 0.2s ease, color 0.2s ease
 
-    &:hover
-      background-color: $green-100
-      color: $white
+      &:hover
+        background-color: $green-100
+        color: $white
