--- a/src/renderer/pages/CreateOrganization/StepTwo/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/StepTwo/styles.module.sass
@@ -15,6 +15,8 @@
     
     h3
       font-size: 1.2rem
+      @media (max-height: 650px)
+        font-size: 1.1rem
 
     img
       border-radius: 5rem
