--- a/src/renderer/pages/CreateOrganization/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/styles.module.sass
@@ -18,13 +18,16 @@
     max-width: 500px
 
   .createWorkspace_content_svg
-    width: 100%
     @include flex(center, center, column)
+    width: 100%
 
   .createWorkspace_content
     @include flex(center, center, row)
     width: 100%
-    height: 100%
+    height: 350px
+    overflow: auto
+
+    @include scroolbarLight()
 
 
     @media (max-height: 650px)
@@ -38,6 +41,10 @@
       width: 100%
       height: 100%
 
+      @media (max-height: 650px)
+        @include flex(center, flex-start, column)
+        padding: 1rem
+
   .createWorkspace_buttons
     width: 100%
     max-width: 400px
@@ -48,7 +55,7 @@
 
     @media (max-height: 800px)
       bottom: 1rem
-      gap: 0
+      margin-top: 1rem
       button
         height: 40px
 
