--- a/src/renderer/pages/CreateOrganization/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/styles.module.sass
@@ -10,7 +10,6 @@
   padding: 1rem
   width: 100%
   height: 100%
-  border: 3px solid red
   position: relative
 
   .steps
@@ -23,16 +22,18 @@
 
   .createWorkspace_content
     @include flex(center, center, row)
+    @include scroolbarLight()
     width: 100%
-    height: 350px
+    height: 100%
+    min-height: 350px
     overflow: auto
 
-    @include scroolbarLight()
-
+    
 
     @media (max-height: 650px)
       @include flex(flex-start, center, row)
       margin-top: 3rem
+      margin-bottom: 4rem
 
     form
       @include flex(center, space-around, column)
