--- a/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
+++ b/src/renderer/pages/Workspace/ViewSafeBox/HeaderSafeBox/styles.module.sass
@@ -40,7 +40,7 @@ header
   gap: 4rem
 
   .actions
-    @include flex(center, flex-end, row)
+    @include flex(flex-start, flex-end, row)
     width: 100%
     gap: 1rem
     margin-right: 50px
