--- a/src/renderer/components/SafeBox/styles.module.sass
+++ b/src/renderer/components/SafeBox/styles.module.sass
@@ -65,7 +65,7 @@
       white-space: nowrap
       text-overflow: ellipsis
       overflow: hidden
-      width: 320px
+      width: 100%
       font-weight: 400
       font-size: 1.05rem
 
@@ -73,7 +73,7 @@
       white-space: nowrap
       text-overflow: ellipsis
       overflow: hidden
-      width: 320px
+      width: 100%
       font-size: .9rem
       &:last-child
         font-weight: 500
