--- a/src/renderer/pages/Workspace/styles.module.sass
+++ b/src/renderer/pages/Workspace/styles.module.sass
@@ -85,8 +85,14 @@
     @include flex(flex-start, flex-start, column)
     width: 100%
     height: 100%
-    min-width: 450px
-    max-width: 450px
+
+    max-width: 200px
+
+    width: 0
+    opacity: 0
+    visibility: hidden
+
+    transition: opacity 0.2s ease, width 0.6s ease, visibility 0.2s ease, all 0.3s ease
 
     .search
       @include flex(center, center, row)
@@ -189,6 +195,7 @@
             color: $gray-500
             width: 100%
             position: relative
+
             &::before
               @include flex(flex-start, center, column)
               content: ''
@@ -198,6 +205,15 @@
               height: 1px
               border-radius: 5rem
 
+  .safeBoxesContainerVisible
+    opacity: 1
+    visibility: visible
+    max-width: 450px
+    width: 100%
+
+    @media (max-width: 1200px)
+      max-width: 250px
+    
   .currentSafeBox
     @include flex(flex-start, center, row)
     height: 100%
