--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -19,15 +19,20 @@
 
 .light
   .option
-    background-color: $gray-400
+    background-color: $gray-300
     >div
       &:hover
-        background-color: $gray-500
+        background-color: $gray-400
 
   .input
+    background-color: $gray-300
     input
-      background-color: $gray-400
       color: $black
+
+
+// --------------------------------------------------------------
+// -------------------------- SETTINGS --------------------------
+// --------------------------------------------------------------
 
 .dropdown
   @include flex(center, center, row)
@@ -37,14 +42,6 @@
   color: $black
   z-index: 300
   margin-top: 8px
-
-  &::before
-    content: ''
-    position: absolute
-    width: 100%
-    height: 1px
-    background-color: $gray-300
-    bottom: -1rem
 
   svg
     min-width: 80px
@@ -57,6 +54,10 @@
   input
     cursor: pointer
     width: 100%
+    background: transparent
+
+  .input
+    border-radius: $default-radius
 
   .input:focus-within ~ .option
     opacity: 1
@@ -64,14 +65,17 @@
 
   .option
     position: absolute
-    top: 30px
+    top: 45px
     right: 0
     border-radius: 10px
     overflow: hidden
     transition: opacity 0.2s, visibility 0.2s
     opacity: 0
     visibility: hidden
-    margin-top: .5rem
+    margin-top: 15px
+
+    @media (max-width: 1080px)
+      margin-top: 10px
 
     div
       padding: 12px 20px
