--- a/src/renderer/components/Buttons/Button/styles.module.sass
+++ b/src/renderer/components/Buttons/Button/styles.module.sass
@@ -9,15 +9,21 @@
   button
     @include flex(center, center, row)
     width: 100%
-    height: 45px
+    height: 40px
     gap: 8px
-    font-size: .9rem
+    font-size: .85rem
 
     background-color: $blue-100
     color: $white
     border-radius: $default-radius
 
     transition: background-color 0.3s ease
+
+    &:disabled
+      background-color: $gray-700 !important
+
+      &:hover
+        background-color: $gray-700 !important
 
     svg
       color: $white
