--- a/src/renderer/components/Modals/FieldModal/styles.module.sass
+++ b/src/renderer/components/Modals/FieldModal/styles.module.sass
@@ -26,7 +26,7 @@
       &:last-child
         color: $white
         &:hover
-          background-color: $red-100-dark-hover
+          background-color: $red-100-hover
       &:hover
         background-color: $gray-400
 .reactModalOverlay
