--- a/src/renderer/components/Modals/VerifyModal/styles.module.sass
+++ b/src/renderer/components/Modals/VerifyModal/styles.module.sass
@@ -33,7 +33,7 @@
     color: $white !important
     background-color: $red-100 !important
     &:hover
-      background-color: $red-100-dark-hover !important
+      background-color: $red-100-hover !important
 
 .reactModalOverlay
   @include flex(center, center ,column)
