--- a/src/renderer/components/Modals/VerifyNameModal/styles.module.sass
+++ b/src/renderer/components/Modals/VerifyNameModal/styles.module.sass
@@ -28,7 +28,7 @@
   .buttonCancel
     color: $white
     &:hover
-      background-color: $red-100-dark-hover
+      background-color: $red-100-hover
 .reactModalOverlay
   @include flex(center, center ,column)
   z-index: 4000
