--- a/src/renderer/components/Modals/VerifySafetyPhraseModal/styles.module.sass
+++ b/src/renderer/components/Modals/VerifySafetyPhraseModal/styles.module.sass
@@ -27,7 +27,7 @@
       &:last-child
         color: $white
         &:hover
-          background-color: $red-100-dark-hover
+          background-color: $red-100-hover
       &:hover
         background-color: $gray-400
 
