--- a/src/renderer/pages/CreateOrganization/StepTwo/styles.module.sass
+++ b/src/renderer/pages/CreateOrganization/StepTwo/styles.module.sass
@@ -46,7 +46,7 @@
         background-color: $red-100
 
         &:hover
-          background-color: $red-100-dark-hover
+          background-color: $red-100-hover
         
     .name_file
       margin-bottom: 2rem
