--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -5,8 +5,7 @@ $blue-100-hover: #197AC7
 $blue-200: #4D8EFF
 
 $red-100: #DD4C4C
-$red-100-hover: #ff6f6f
-$red-100-dark-hover: #c54949
+$red-100-hover: #8d3131
 
 $green-100: #05CF60
 
