--- a/src/renderer/pages/WorkspaceSettings/components/Settings/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Settings/styles.module.sass
@@ -1,19 +1,35 @@
 @use '../../../../styles/_util' as *
 
+.settings.dark
+  color: $white
+.settings.light
+  color: $black
+
 .settings
   @include flex(flex-start, center, row)
   width: 100%
   padding: 1rem
   height: 100%
+  overflow: auto
 
   .settingsContainer
     width: 100%
     max-width: 1000px
+
     
     .image
       @include flex(flex-start, center, row)
       width: 100%
       gap: 1rem
+      position: relative
+
+      &::before
+        content: ''
+        position: absolute
+        width: 100%
+        height: 1px
+        background-color: $gray-400
+        bottom: -2rem
 
       img
         max-width: 100px
@@ -22,17 +38,80 @@
       .actions
         @include flex(center, center, column)
         gap: 1rem
-        width: 150px
+        width: 200px
         margin-left: auto
 
         >div
           width: 100%
-      
-        button
-          max-height: 40px
 
         .red
           background-color: $red-100
+          &:hover
+            background-color: $red-100-hover
+
+            
+    .form
+      width: 100%
+      height: 100%
+      margin-top: 4rem
+      position: relative
+
+
+      form
+        @include flex(center, center, column)
+        width: 100%
+        height: 100%
+
+        gap: 1rem
+
+        .actions
+          @include flex(center, center, row)
+          width: 100%
+          max-width: 300px
+          gap: 1rem
+
+          .red
+            background-color: $red-100
+            &:hover
+              background-color: $red-100-hover
+
+    .separator
+      position: relative
+      color: $gray-400
+      margin-top: 2rem
+
+      span
+        font-family: 'Anek Devanagari'
+        font-size: 1rem
+      &::before
+        content: ''
+        position: absolute
+        width: 100%
+        height: 1px
+        bottom: 0px
+        
+        background-color: $gray-400
+
+    .organizationActions
+      @include flex(space-between, flex-start, column)
+      gap: 3rem
+      width: 100%
+      margin-top: 2rem
+
+      height: 240px
+
+      .item
+        @include flex(center, center, row)
+        width: 100%
+
+        h3
+          margin-bottom: 8px
+        
+        button
+          max-width: 200px
+          margin-left: auto
+
+          background-color: $red-100
 
           &:hover
-            background-color: $red-100-dark-hover
+            background-color: $red-100-hover
