--- a/src/renderer/pages/WorkspaceSettings/components/Settings/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Settings/styles.module.sass
@@ -5,6 +5,8 @@
 .settings.light
   color: $black
 
+
+
 .settings
   @include flex(flex-start, center, row)
   width: 100%
@@ -12,6 +14,9 @@
   height: 100%
   overflow: auto
 
+  @media (max-width: 1100px)
+    button
+      max-width: 170px !important
   .settingsContainer
     width: 100%
     max-width: 1000px
@@ -30,11 +35,15 @@
         height: 1px
         background-color: $gray-400
         bottom: -2rem
-
+      
       img
         max-width: 100px
         border-radius: 5rem
-      
+      .title
+        h3
+          margin-bottom: 3px
+        span
+          color: $gray-500
       .actions
         @include flex(center, center, column)
         gap: 1rem
