--- a/src/renderer/components/Dropdown/styles.module.sass
+++ b/src/renderer/components/Dropdown/styles.module.sass
@@ -25,7 +25,7 @@
         background-color: $gray-400
 
   .input
-    background-color: $gray-300
+    background-color: $gray-400
     input
       color: $black
 
@@ -37,11 +37,11 @@
 .dropdown
   @include flex(center, center, row)
   width: 100%
+  height: 100%
   gap: 2rem
   position: relative
   color: $black
   z-index: 300
-  margin-top: 8px
 
   svg
     min-width: 80px
@@ -52,6 +52,8 @@
     width: 100%
 
   input
+    @include flex(center, center, row)
+    height: 45px
     cursor: pointer
     width: 100%
     background: transparent
