--- a/src/renderer/pages/WorkspaceSettings/components/Sidebar/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Sidebar/styles.module.sass
@@ -30,11 +30,11 @@
   padding: 1rem
 
   header
-    @include flex(center, center, row)
-    
+    @include flex(center, center, column)
+    gap: 1rem
     img
-      width: 150px
-      height: 150px
+      width: 125px
+      height: 125px
       border-radius: 5rem
       object-fit: contain
 
