--- a/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/styles.module.sass
@@ -66,6 +66,7 @@
   header
     @include flex(center, space-between, row)
     width: 100%
+
     .participantButton
       @include flex(center, center, row)
       gap: .5rem
@@ -95,3 +96,8 @@
     height: 100%
 
     max-height: calc( 100vh - 120px )
+
+    >div
+      min-height: calc( 100vh - 620px )
+
+    
