--- a/src/renderer/components/Navbar/styles.module.sass
+++ b/src/renderer/components/Navbar/styles.module.sass
@@ -54,6 +54,10 @@
     @include flex(center, space-between, row)
     gap: 1rem
     margin-left: 2rem
+    
+    h3
+      font-weight: 400
+
     img
       max-width: 30px
 
