--- a/src/renderer/styles/_util.sass
+++ b/src/renderer/styles/_util.sass
@@ -87,13 +87,13 @@ $default-radius: .5rem
   &::-webkit-scrollbar-thumb
     background-color: $gray-500
   &::-webkit-scrollbar
-    width: .4em
+    width: .7em
 
-  &::-webkit-scrollbar-track
-    border-radius: 5rem
+  // &::-webkit-scrollbar-track
+  //   border-radius: 5rem
 
-  &::-webkit-scrollbar-thumb
-    border-radius: 5rem
+  // &::-webkit-scrollbar-thumb
+  //   border-radius: 5rem
 
     
 @mixin scroolbarDark() 
@@ -102,10 +102,7 @@ $default-radius: .5rem
   &::-webkit-scrollbar-thumb
     background-color: $gray-600
   &::-webkit-scrollbar
-    width: .4em
+    width: .7em
 
-  &::-webkit-scrollbar-track
-    border-radius: 5rem
-
-  &::-webkit-scrollbar-thumb
-    border-radius: 5rem
+  // &::-webkit-scrollbar-thumb
+  //   border-radius: 5rem
