--- a/src/renderer/pages/Workspace/styles.module.sass
+++ b/src/renderer/pages/Workspace/styles.module.sass
@@ -96,7 +96,7 @@
 
     .search
       @include flex(center, center, row)
-      gap: 1rem
+      gap: .5rem
       width: 100%
       padding: 1rem
       position: relative
@@ -107,22 +107,22 @@
 
         input
           border-radius: $default-radius
-          height: 38px
+          height: 35px
           width: 100%
           padding: 0 2.4rem
 
         svg
           position: absolute
-          top: 9px
+          top: 6px
           left: 10px
           height: 22px
           width: 22px
 
       >button
         @include flex(center, center, row)
-        height: 38px
+        height: 35px
         padding: 0 1rem
-        font-size: 1.2rem
+        font-size: 1rem
         color: $white
         border-radius: $default-radius
         cursor: pointer
@@ -142,8 +142,8 @@
         span
           width: 100%
           height: 1px
+
         h4
-          font-family: 'Anek Devanagari', sans-serif
           padding: 0 .5rem
           margin-top: .5rem
 
@@ -163,7 +163,6 @@
         opacity: 1
 
     .safeBoxes
-      padding: .5rem
       @include flex(center, flex-start, column)
       width: 100%
       height: calc( 100vh - 115px )
@@ -195,12 +194,13 @@
             color: $gray-500
             width: 100%
             position: relative
+            margin-left: .5rem
 
             &::before
               @include flex(flex-start, center, column)
               content: ''
               position: absolute
-              width: 100%
+              width: 98%
               top: 20px
               height: 1px
               border-radius: 5rem
@@ -208,11 +208,11 @@
   .safeBoxesContainerVisible
     opacity: 1
     visibility: visible
-    max-width: 450px
+    max-width: 300px
     width: 100%
 
     @media (max-width: 1200px)
-      max-width: 250px
+      max-width: 300px
     
   .currentSafeBox
     @include flex(flex-start, center, row)
