--- a/src/renderer/pages/WorkspaceSettings/components/Members/TableMembers/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Members/TableMembers/styles.module.sass
@@ -40,10 +40,10 @@
     margin: 1rem 0
 
     h4
-      font-family: 'Anek Devanagari'
-      text-transform: uppercase
-      font-weight: 500
       color: $gray-500
+      font-weight: 400
+      font-size: .9rem
+
     &::before
       content: ''
       position: absolute
@@ -77,8 +77,6 @@
           width: 45px
           height: 45px
           border-radius: 5rem
-          
-          text-transform: uppercase
           font-size: 1rem
 
       button
