--- a/src/renderer/pages/WorkspaceSettings/components/Settings/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Settings/styles.module.sass
@@ -2,9 +2,10 @@
 
 .settings.dark
   color: $white
+  @include scroolbarDark()
 .settings.light
   color: $black
-
+  @include scroolbarLight()
 
 
 .settings
@@ -13,6 +14,8 @@
   padding: 1rem
   height: 100%
   overflow: auto
+
+  
 
   @media (max-width: 1100px)
     button
@@ -86,36 +89,43 @@
 
     .separator
       position: relative
-      color: $gray-400
+      color: $gray-500
       margin-top: 2rem
 
       span
-        font-family: 'Anek Devanagari'
         font-size: 1rem
+
       &::before
         content: ''
         position: absolute
         width: 100%
         height: 1px
         bottom: 0px
+        top: 1.5rem
         
         background-color: $gray-400
 
     .organizationActions
-      @include flex(space-between, flex-start, column)
+      @include flex(center, center, column)
       gap: 3rem
       width: 100%
       margin-top: 2rem
-
+      margin-bottom: 2rem
       height: 240px
 
       .item
-        @include flex(center, center, row)
+        @include flex(center, space-between, row)
         width: 100%
 
         h3
           margin-bottom: 8px
-        
+          font-weight: 400
+        .text
+          width: 100%
+          margin-right: 2rem
+        >div
+          width: 220px
+
         button
           max-width: 200px
           margin-left: auto
