--- a/src/renderer/pages/WorkspaceSettings/components/Sidebar/styles.module.sass
+++ b/src/renderer/pages/WorkspaceSettings/components/Sidebar/styles.module.sass
@@ -21,6 +21,10 @@
         button
           color: $black
 
+// --------------------------------------------------------------
+// -------------------------- SETTINGS --------------------------
+// --------------------------------------------------------------
+
 .sidebar
   @include flex(flex-start, flex-start, column)
   width: 250px
@@ -32,6 +36,7 @@
   header
     @include flex(center, center, column)
     gap: 1rem
+
     img
       width: 125px
       height: 125px
@@ -57,12 +62,6 @@
           padding: .3rem .5rem
           border-radius: $default-radius
           transition: background-color 0.2s ease, color 0.2s ease
-
-          font-family: 'Anek Devanagari'
-          font-weight: 500
-
-          span
-            margin-top: 4px
 
           svg
             font-size: 1.3rem
